<resources>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="next">Continue</string>
    <string name="select_your_country">Select your country</string>
    <string name="country_name_or_code">Country name or code</string>
    <string name="already_have_an_account_log_in">Already have an account? <b>Log in.</b></string>
    <string name="unexpected_error">Meet unexpected error, please try it later.</string>

    <string name="captcha_hint">Confirmation Code</string>
    <string name="enter_captcha_code">Enter Confirmation Code</string>
    <string name="resend_captcha_code">Please enter the confirmation code you are received.<br />Not received ? <b>Resend confirmation code</b></string>
    <string name="send_captcha_code">Send Confirmation Code</string>
    <string name="ok">OK</string>
    <string name="send_captcha_dialog_notice">Please waiting %d seconds for resend the confirmation code.</string>
    <string name="receive_captcha_notice">Confirmation code sent successfully, please pay attention to the reception.</string>
    <string name="send_captcha_error">Fail sent confirmation code, please try it later.</string>
    <string name="check_captcha_error">Please checking your confirmation code input currently.</string>

    <string name="uid_hint">User ID</string>
    <string name="username_hint">User Name</string>
    <string name="user_password_hint">Password</string>
    <string name="user_account_hit">Account</string>
    <string name="uid_error">User ID length must not be less than %s numbers including letters.</string>
    <string name="username_error">Username length must not be less than %s numbers including letters.</string>
    <string name="user_password_error">Password length must not be less than %s numbers including letters.</string>
    <string name="not_support_character">Not support character %c.</string>
    <string name="uid_not_unique">User ID is existed, please try another.</string>

    <string name="web_image_click_target" translatable="false">imageClick</string>
    <string name="web_image_click" translatable="false">
    <![CDATA[
        javascript: (function() {
            var obj=document.elementFromPoint(%1$f, %2$f);
            if (obj.src!=null) { window.imageClick.click(obj.src, obj.width, obj.height); }
        })()
    ]]>
    </string>
    <string name="use_current_image">Use current image ?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="network_abnormal">Can\'t connecting to the server, please check you network connection.</string>
    <string name="pick_image">Pick Image</string>
    <string name="could_not_access_image">Can\'t access image.</string>
    <string name="fail_crop_image">Crop image fail.</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="select_from_camera">Camera</string>
    <string name="no_suitable_camera">No Found Any Suitable Camera.</string>
    <string name="pick_image_rationale">This app need permission to access your image.</string>
    <string name="take_photo_rationale">This app need permission to take a photo.</string>
    <string name="not_image_file">Please select a image.</string>
    <string name="setting">Settings</string>
    <string name="settings_dialog_title">Permissions Required</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="open_camera_failure">Fail to open camera.</string>

    <string name="don_not_have_an_account_register">Don\'t have an account? <b>Register.</b></string>

    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_pin">Pin</string>
    <string name="title_latest_collections">Latest Collections</string>
    <string name="toolbar_scrolling_view_behavior" translatable="false">com.tomeokin.lspush.ui.widget.behavior.ToolbarBehavior</string>

    <string name="add_tag">Add Tag</string>
    <string name="more">more</string>

    <string name="just_now">just now</string>
    <string name="minutes_ago">%d minute ago</string>
    <string name="hours_ago">%d hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%d days ago</string>

    <string name="collect">Collect</string>
    <string name="copy_link">Copy Link</string>
    <string name="share">Share with</string>
    <string name="refresh">Refresh</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="select_browser">Select Browser</string>

    <string name="add_favor_failure">Add Collection Failure.</string>
    <string name="remove_favor_failure">Remove Collection Failure.</string>
    <string name="explorer">explorer</string>
    <string name="favor_count">Favor Count %d</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="uri_hint">URL</string>
    <string name="add_url">Add A URL</string>
    <string name="add_url_failure">Get Url Information Failure.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_image">Description Image</string>
    <string name="tag">Tag</string>
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="waiting_post_collection">The collection is posting now.</string>
    <string name="post_collection_success">Post collection success.</string>
    <string name="post_collection_failure">Post collection failure.</string>
    <string name="select_description_image">Select Description Image</string>
    <string name="ignore_change_of_collection">Collection has change, ignore them ?</string>
    <string name="svg_up" translatable="false">M25,32L31,32L31,26L35,26L28,19L21,26L25,26L25,32Z</string>
    <string name="no_collections" translatable="false">No collections?\n\nLet\'s push and share!</string>
    <string name="start">Start</string>
    <string name="could_not_get_url_info">Could not get the url info.</string>
    <string name="posts">Posts</string>
    <string name="favors">Favors</string>
</resources>
