<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.LsPush.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_size"
        android:orientation="vertical"
        android:padding="@dimen/page_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black_87_transparent"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/description"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_87_transparent"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/description_image"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/font_medium" />

        <ImageView
            android:id="@+id/description_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/list_item_max_content"
            android:padding="@dimen/row_vertical_padding"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_add_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tag"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/font_medium" />

        <com.tomeokin.lspush.ui.widget.tag.TagGroup
            android:id="@+id/tagGroup"
            android:layout_width="match_parent"
            app:atg_isAppendMode="true"
            app:atg_textSize="@dimen/font_medium"
            app:atg_inputHint="@string/tag"
            app:atg_checkedMarkerColor="@color/colorAccent"
            app:atg_checkedTextColor="@color/black_87_transparent"
            app:atg_dashBorderColor="#66bd2b"
            app:atg_borderColor="#66bd2b"
            app:atg_checkedBorderColor="#66bd2b"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>